--- a/tex/tesis.bib
+++ b/tex/tesis.bib
@@ -249,6 +249,23 @@ title = {Algorithms for Hyper-Parameter Optimization}
   publisher={Multidisciplinary Digital Publishing Institute}
 }
 
+@misc{neptune,
+	title = {{Best Tools for Model Tuning and Hyperparameter Optimization - neptune.ai}},
+	journal = {Neptune},
+	year = {2021},
+	month = {May},
+	note = {[Online; accessed 12. Jul. 2021]},
+	url = {https://neptune.ai/blog/best-tools-for-model-tuning-and-hyperparameter-optimization}
+}
+
+@misc{trendsML,
+	title = {{Papers with Code - Papers With Code : Trends}},
+	year = {2021},
+	month = {Jul},
+	note = {[Online; accessed 12. Jul. 2021]},
+	url = {https://paperswithcode.com/trends}
+}
+
 @misc{CUDA,
 	title = {{CUDA Zone}},
 	journal = {NVIDIA Developer},
