added appreciations, number phone, mail

--- a/tex/tesis.tex
+++ b/tex/tesis.tex
@@ -32,9 +32,11 @@
 \useunder{\uline}{\ul}{}
 \DeclareMathOperator*{\argmax}{arg\,max}
 \DeclareMathOperator*{\argmin}{arg\,min}
+\author{Gerardo A. COLLANTE \\ email: \href{mailto:gerardo.collante@unc.edu.ar}{gerardo.collante@unc.edu.ar} \\ cel: 54 (03574) 650490}
 
 \begin{document}
 
+\makeatletter
 \begin{titlepage}
 	
 	{\scshape\LARGE Universidad Nacional de Córdoba \par}
@@ -49,7 +51,13 @@
 	\vspace{1.5cm}
 	{\large\bfseries ``Predicción de cantidad de defectos graves en vehículos utilitarios en planta automotriz'' \par}
 	\vspace{1.5cm}
-	{\Large\bfseries Gerardo A. Collante\par}
+	%{\Large\bfseries Gerardo A. COLLANTE\par}
+	
+	\normalsize\@author\space
+	
+	%{\normalsize \textbf{Matrícula}: 39.022.782}}
+	%{\normalsize \textbf{Correo institucional}: gerardo.collante@unc.edu.ar}
+	%{\normalsize \textbf{Matrícula}: 39.022.782}
 	
 	\vfill
 	\textbf{Supervisor}\par
@@ -60,6 +68,28 @@
 % Bottom of the page
 	{\large \today\par}
 \end{titlepage}
+
+\newpage
+\thispagestyle{empty}
+\section*{Agradecimientos}
+\topskip0pt
+\vspace*{\fill}
+
+\begin{flushright}
+\textit{En primer lugar quiero agradecer profundamente a todas las personas que formaron parte de este viaje que culmina. Cada una de ellas aportó su granito de arena para que hoy me sea posible hacer realidad el objetivo más importante de mi vida. Especialmente a mis papás Daniel y Gloria, que ofreciendo su tiempo y esfuerzo me concedieron la dicha de poder formarme como profesional.}
+\end{flushright}
+
+\begin{flushright}
+\textit{También quiero agradecer a mi supervisor Dr. Ing. Orlando Micolini por impartir conocimiento, brindar consejos y transmitir su experiencia a lo largo de todo el proceso del proyecto integrador.}
+\end{flushright}
+
+\begin{flushright}
+\textit{Finalmente, el reconocimiento a la Universidad Nacional de Córdoba y la Facultad de Ciencias Exactas, Físicas y Naturales por estos invaluables años de saber y formación. La universidad pública me proveyó los recursos para que en el presente día me encuentre en condiciones de finalizar mi carrera de grado y graduarme como ingeniero, en virtud de ello mi gratitud eterna.}
+\end{flushright}
+
+\vspace*{\fill}
+
+\clearpage
 
 \tableofcontents
 
