--- a/tex/tesis.bib
+++ b/tex/tesis.bib
@@ -249,6 +249,15 @@ title = {Algorithms for Hyper-Parameter Optimization}
   publisher={Multidisciplinary Digital Publishing Institute}
 }
 
+@misc{neurona_wiki,
+	author = {{Colaboradores de los proyectos Wikimedia}},
+	title = {{Soma (neurolog{\ifmmode\acute{\imath}\else\'{\i}\fi}a) - Wikipedia, la enciclopedia libre}},
+	year = {2021},
+	month = {May},
+	note = {[Online; accessed 26. Oct. 2021]},
+	url = {https://es.wikipedia.org/w/index.php?title=Soma_(neurolog%C3%ADa)&oldid=135426685}
+}
+
 @misc{neptune,
 	title = {{Best Tools for Model Tuning and Hyperparameter Optimization - neptune.ai}},
 	journal = {Neptune},
