new version with new images

--- a/tex/tesis.bib
+++ b/tex/tesis.bib
@@ -402,6 +402,44 @@ title = {Algorithms for Hyper-Parameter Optimization}
 	url = {https://es.wikipedia.org/w/index.php?title=Vientre_de_alquiler_(pr%C3%A1ctica)&oldid=134152025}
 }
 
+@article{Tobin2020Jun,
+	author = {Tobin, Donal},
+	title = {{ETL Pipeline vs. Data Pipeline: What's the Difference?}},
+	journal = {Xplenty},
+	year = {2020},
+	month = {Jun},
+	publisher = {Xplenty},
+	url = {https://www.xplenty.com/blog/etl-pipeline-vs-data-pipeline}
+}
+
+@misc{astronomer,
+	title = {{What Exactly is a DAG?}},
+	year = {2021},
+	month = {Oct},
+	note = {[Online; accessed 29. Oct. 2021]},
+	url = {https://www.astronomer.io/blog/what-exactly-is-a-dag}
+}
+
+@misc{SeattleDataGuy,
+	title = {{Data Engineering 101: How Do I Get Value From My Data - Seattle Data Guy}},
+	journal = {Seattle Data Guy},
+	year = {2020},
+	month = {Mar},
+	note = {[Online; accessed 29. Oct. 2021]},
+	url = {https://www.theseattledataguy.com/data-engineering-101/#page-content}
+}
+
+@article{AyyuceKizrak2020Jan,
+	author = {Ayy{\ifmmode\ddot{u}\else\"{u}\fi}ce K{\ifmmode\imath\else\i\fi}zrak, {\relax Ph}. D.},
+	title = {{Comparison of Activation Functions for Deep Neural Networks}},
+	journal = {Medium},
+	year = {2020},
+	month = {Jan},
+	issn = {7064-2848},
+	publisher = {Towards Data Science},
+	url = {https://towardsdatascience.com/comparison-of-activation-functions-for-deep-neural-networks-706ac4284c8a}
+}
+
 @article{Ye2020Oct,
 	author = {Ye, Andre},
 	title = {{The Beauty of Bayesian Optimization, Explained in Simple Terms}},
