--- a/tex/tesis.bib
+++ b/tex/tesis.bib
@@ -5,6 +5,17 @@
   publisher={PyImageSearch}
 }
 
+@article{Chinchure2020May,
+	author = {Chinchure, Aditya},
+	title = {{A production-grade Machine Learning API using Flask, Gunicorn, Nginx, and Docker {\ifmmode---\else\textemdash\fi} Part 1}},
+	journal = {Medium},
+	year = {2020},
+	month = {May},
+	issn = {4992-7238},
+	publisher = {Technonerds},
+	url = {https://medium.com/technonerds/a-production-grade-machine-learning-api-using-flask-gunicorn-nginx-and-docker-part-1-49927238befb}
+}
+
 @misc{kfolds,
 	title = {{ProClassify User's Guide - Cross-Validation Explained}},
 	year = {2006},
@@ -427,6 +438,59 @@ title = {Algorithms for Hyper-Parameter Optimization}
 	month = {Mar},
 	note = {[Online; accessed 29. Oct. 2021]},
 	url = {https://www.theseattledataguy.com/data-engineering-101/#page-content}
+}
+
+@misc{flask,
+	title = {{What is Flask Python - Python Tutorial}},
+	year = {2021},
+	month = {Nov},
+	note = {[Online; accessed 2. Nov. 2021]},
+	url = {https://pythonbasics.org/what-is-flask-python}
+}
+
+@misc{docker,
+	title = {{xn--2n8h ELI5: Docker}},
+	journal = {docker-explained},
+	year = {2021},
+	month = {Sep},
+	note = {[Online; accessed 2. Nov. 2021]},
+	url = {https://jzhao.xyz/docker-explained/#what-is-docker}
+}
+
+@misc{nginx,
+	title = {{What is NGINX? - NGINX}},
+	journal = {NGINX},
+	year = {2021},
+	month = {Jul},
+	note = {[Online; accessed 2. Nov. 2021]},
+	url = {https://www.nginx.com/resources/glossary/nginx}
+}
+
+@misc{gunicorn,
+	title = {{Gunicorn - Python WSGI HTTP Server for UNIX}},
+	year = {2021},
+	month = {Mar},
+	note = {[Online; accessed 2. Nov. 2021]},
+	url = {https://gunicorn.org}
+}
+
+@misc{ubuntu,
+	author = {{Contributors to Wikimedia projects}},
+	title = {{Ubuntu - Wikipedia}},
+	year = {2021},
+	month = {Oct},
+	note = {[Online; accessed 2. Nov. 2021]},
+	url = {https://en.wikipedia.org/w/index.php?title=Ubuntu&oldid=1051887737}
+}
+
+@misc{RisingOdegua,
+	author = {Rising Odegua},
+	title = {{How to put machine learning models into production}},
+	journal = {Stack Overflow Blog},
+	year = {2020},
+	month = {Oct},
+	note = {[Online; accessed 2. Nov. 2021]},
+	url = {https://stackoverflow.blog/2020/10/12/how-to-put-machine-learning-models-into-production}
 }
 
 @article{AyyuceKizrak2020Jan,
