new version with secondary goals fixed

--- a/tex/anexo.tex
+++ b/tex/anexo.tex
@@ -253,7 +253,8 @@ En la Fig.~\ref{fig:maindiagram.} obtenemos una vista general sobre que hacer co
 
 \clearpage
 
-\setcounter{page}{13}
+\setcounter{page}{21}
+\setcounter{table}{7}
 
 \begin{landscape}
 		
@@ -341,7 +342,7 @@ En la Fig.~\ref{fig:maindiagram.} obtenemos una vista general sobre que hacer co
 
 \begin{landscape}
 
-	\setcounter{page}{15}
+	\setcounter{page}{22}
 		
 	\begin{table}[]
 		\centering
