--- a/tex/tesis.bib
+++ b/tex/tesis.bib
@@ -431,6 +431,23 @@ title = {Algorithms for Hyper-Parameter Optimization}
 	url = {https://www.astronomer.io/blog/what-exactly-is-a-dag}
 }
 
+@article{sommerville2015software,
+  title={Software engineering 10th edition},
+  author={Sommerville, Ian},
+  journal={ISBN-10},
+  volume={137035152},
+  pages={18},
+  year={2015}
+}
+
+@misc{pareto,
+	title = {{{\textquestiondown}Qu{\ifmmode\acute{e}\else\'{e}\fi} es el Principio de Pareto? La Ley del 80/20 {$\vert$} Blog de Anfix}},
+	year = {2021},
+	month = {Nov},
+	note = {[Online; accessed 11. Nov. 2021]},
+	url = {https://www.anfix.com/blog/que-es-el-principio-de-pareto}
+}
+
 @misc{SeattleDataGuy,
 	title = {{Data Engineering 101: How Do I Get Value From My Data - Seattle Data Guy}},
 	journal = {Seattle Data Guy},
